--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -35,7 +35,7 @@
               <tr>
                 <td>
                   <img
-                    src="/uploads/products/<%= product.image %>"
+                    src="/uploads/products/<%= product.image[0] %>"
                     class="img-sm img-thumbnail"
                     alt="Product"
                   />
